--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public//todo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Nico Guerin" />
+    <meta name="description" content="Todo App implementation made with React JS and Tailwind CSS" />
     <title>Todo App - Nico Guerin</title>
   </head>
   <body>
